feat: delete user endpoint
